--- a/config/docker/.env
+++ b/config/docker/.env
@@ -1,11 +1,4 @@
-# system
-NET_DEVICE=
-BASE_IP=
-GATEWAY=
-FIXED_IP=
-DNS_SERVERS=8.8.8.8,223.5.5.5
-
-# docker
+#=infrastructure
 NETWORK_NAME=app_network
 MINIO_ROOT_USER=minioadmin
 MINIO_ROOT_PASSWORD=minioadmin
