--- a/config/docker/.env
+++ b/config/docker/.env
@@ -1,3 +1,10 @@
+# docker service setup
+NGINX_SETUP=true
+MINIO_SETUP=false
+MARIADB_SETUP=false
+POSTGRES_SETUP=true
+REDIS_SETUP=true
+
 #=infrastructure
 NETWORK_NAME=app_network
 MINIO_ROOT_USER=minioadmin
