--- a/config/docker/.env
+++ b/config/docker/.env
@@ -1,19 +1,13 @@
-# docker service setup
-NGINX_SETUP=true
-MINIO_SETUP=false
-MARIADB_SETUP=false
-POSTGRES_SETUP=true
-REDIS_SETUP=true
+#=infra setup
+NGINX=true
+MARIADB=
+POSTGRES=true
+REDIS=true
+MINIO=
 
-#=infrastructure
+#=apps setup
+VAULTWARDEN=
+NEXTCLOUD=
+
+#=global
 NETWORK_NAME=app_network
-MINIO_ROOT_USER=minioadmin
-MINIO_ROOT_PASSWORD=minioadmin
-MYSQL_VERSION=10
-MYSQL_GUID=
-MYSQL_ROOT_PASSWORD=
-POSTGRES_VERSION=16
-POSTGRES_GUID=
-POSTGRES_PASSWORD=
-REDIS_GUID=
-REDIS_PASSWORD=
