file_backup_sj在python中添加 MirrorResult移到linux_speed.py init_debian.sh添加cdrom和现有镜像检测，并自动调整镜像 增加init_os_info.py用于获取系统信息

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -142,11 +142,11 @@
                 // "sh_check_ip",
                 // ""
                 "sh_update_source",
-                // "Debian",
-                // "Ubuntu",
-                "CentOS",
-                // "Arch",
-                // "OpenSUSE",
+                "debian",
+                // "ubuntu",
+                // "centos",
+                // "arch",
+                // "opensuse",
                 "CN"
             ],
             "console": "integratedTerminal"
