--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -22,8 +22,8 @@
             "name": "Bash-Debug (init_debian)",
             "terminalKind": "integrated",
             "cwd": "${workspaceFolder}",
-            // "program": "${workspaceFolder}/bin/deb/init_debian.sh",
-            "program": "${workspaceFolder}/bin/cos/init_centos.sh",
+            "program": "${workspaceFolder}/bin/deb/init_debian.sh",
+            // "program": "${workspaceFolder}/bin/cos/init_centos.sh",
             "args": [],
             "env": {
                 "DEBUG": "1"
@@ -143,10 +143,10 @@
                 // "sh_check_ip",
                 // ""
                 "sh_update_source",
-                // "debian",
+                "debian",
                 // "ubuntu",
                 // "centos",
-                "opensuse",
+                // "opensuse",
                 // "arch",
                 "CN"
             ],
