ast_parser一拆3，增加shell和python处理逻辑 ast_parser_shell代码优化（利用类变量简化参数传递）

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -106,7 +106,8 @@
             "type": "debugpy",
             "name": "Python: 启动 ast_parser.py",
             "request": "launch",
-            "program": "${workspaceFolder}/python/ast_parser.py",
+            "program": "${workspaceFolder}/python/ast_parser_shell.py",
+            // "program": "${workspaceFolder}/python/ast_parser_python.py",
             "args": [
                 "bin/init_main.sh",
                 "bin/i18n.sh"
