ast_parser_shell代码重构；改写ast_parser_python；增加测试代码：lang_test.py

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -73,7 +73,8 @@
                 //"del",
                 // "-y",
                 // "--lang=ko fr",
-                //"--file=bin/i18n.sh bin/init_main.sh",
+                // "--file=bin/i18n.sh bin/init_main.sh",
+                // "--file=python/lang_test.py",
                 "--lang=zh en",
                 // "--lang=en",
                 "--test_run"
