msg_parse_tmpl复制到mypip.py; "_mf"的处理与"string"独立开来

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -169,6 +169,13 @@
                 "DEBUG": "1"
             },
             "console": "integratedTerminal"
+        },
+        {
+            "type": "debugpy",
+            "name": "Python: 启动 mypip.py",
+            "request": "launch",
+            "program": "${workspaceFolder}/mypip.py",
+            "console": "integratedTerminal"
         }
     ]
 }
