--- a/config/network/.env
+++ b/config/network/.env
@@ -3,8 +3,8 @@
 MAIN_IFACE=ens192
 DHCP_CLIENT=True
 IS_CLOUD=
-CURR_NM=systemd-networkd
-CURR_IP=192.168.71.109
+CURR_NM=networking
+CURR_IP=192.168.71.4
 GATEWAY=192.168.71.1
 STATIC_IP=192.168.71.109
 DNS_SERVERS=116.228.111.118 180.168.255.18
