--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -159,8 +159,9 @@
             "program": "${workspaceFolder}/myshell.py",
             "args": [
                 // "sh_fix_ip",
+                "sh_config_sshd",
                 // ""
-                "sh_update_source",
+                // "sh_update_source",
                 "debian",
                 // "ubuntu",
                 // "centos",
