--- a/config/network/.env
+++ b/config/network/.env
@@ -1,11 +1,11 @@
 #=network
 
-MAIN_IFACE=ens192
-DHCP_CLIENT=False
+MAIN_IFACE=
+DHCP_CLIENT=
 IS_CLOUD=
-CURR_NM=systemd-networkd
-CURR_IP=192.168.71.109
-GATEWAY=192.168.71.1
-STATIC_IP=192.168.71.109
-DNS_SERVERS=116.228.111.118 180.168.255.18
-HAS_STATIC=active
+CURR_NM=
+CURR_IP=
+GATEWAY=
+STATIC_IP=
+DNS_SERVERS=8.8.8.8 1.1.1.1
+HAS_STATIC=
