user_file_permit函数处理权限; 其他函数名称调整; require_sudo代码优化; 去掉SUDO_CMD; 设置REAL_USER代替USER、REAL_HOME代替HOME

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -159,7 +159,7 @@
             "program": "${workspaceFolder}/myshell.py",
             "args": [
                 "sh_fix_ip",
-                // "sh_config_sshd",
+                // "sh_configure_sshd",
                 // ""
                 // "sh_update_source",
                 "debian",
