--- a/config/docker/.env
+++ b/config/docker/.env
@@ -1,11 +1,11 @@
-#=infra setup
-NGINX=true
-MARIADB=
-POSTGRES=true
-REDIS=true
+#=infrastructure
+NGINX=True
+MARIADB=True
+POSTGRES=
+REDIS=True
 MINIO=
 
-#=apps setup
+#=applications
 VAULTWARDEN=
 NEXTCLOUD=
 
